fix: flex-wrap at home page

--- a/src/routes/home/styles.module.scss
+++ b/src/routes/home/styles.module.scss
@@ -51,8 +51,11 @@
 .cardsWrapper {
     display: flex;
     gap: 20px;
-    flex-wrap: wrap;
     @media only screen and (max-width: 768px) {
+        justify-content: center;
+    }
+    @media only screen and (max-width: 1440px) {
+        flex-wrap: wrap;
         justify-content: center;
     }
 }
